objects/ssot__CompliancePolicy__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Compliance Policy Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastReviewDate__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextReviewDate__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PolicyRepresentativeId__c</fullName>
        <label>Policy Representative</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PolicyRepresentativeObject__c</fullName>
        <label>Policy Representative Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceDocumentsLinksURL__c</fullName>
        <label>Reference Documents Links</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewFrequency__c</fullName>
        <label>Review Frequency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope__c</fullName>
        <label>Scope</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762827301_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePolicy_PolicyRepresentativ_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>CompliancePolicy_PolicyRepresentativ_rel</relationshipLabel>
        <relationshipName>rel_1752762827301_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762833303_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePolicy_PolicyRepresentativ_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>CompliancePolicy_PolicyRepresentativ_rel</relationshipLabel>
        <relationshipName>rel_1752762833303_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>